Fixing contrast

--- a/styles/base.css
+++ b/styles/base.css
@@ -166,7 +166,8 @@ li a:hover{
   }
 
   #divideh2{
-    color: #f77f00;
+    color: #d62828;
+    /*color: #f77f00;*/
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   }
 
